java english iter_0